--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^1.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,4 +15,3 @@
     "eject": "react-scripts eject"
   }
 }
-
