--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,7 +36,7 @@ joblib==1.3.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver==1.4.5
-lxml==5.2.0
+lxml[html_clean]
 MarkupSafe==2.1.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
@@ -90,4 +90,4 @@ typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==1.26.18
 wcwidth==0.2.13
-Werkzeug==3.0.2
+Werkzeug>=2.0.0
